apps/infra/notifiarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifiarr
  namespace: infra
  labels:
    app: notifiarr
    app.kubernetes.io/name: notifiarr
    app.kubernetes.io/instance: notifiarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifiarr
  template:
    metadata:
      labels:
        app: notifiarr
        app.kubernetes.io/name: notifiarr
        app.kubernetes.io/instance: notifiarr
    spec:
      containers:
      - name: notifiarr
        image: golift/notifiarr:0.9.5
        ports:
        - containerPort: 5454
          name: notifiarr
        volumeMounts:
          - name: config
            mountPath: /config
          - name: utmp
            mountPath: /var/run/utmp
            readOnly: true
          - name: machine-id
            mountPath: /etc/machine-id
            readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: notifiarr-config
        - name: utmp
          hostPath:
            path: /var/run/utmp
        - name: machine-id
          hostPath:
            path: /etc/machine-id
